# FluidGenie

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config_io.py  dynamics.toml  dynamics_maskgit.toml  eval_configs.py  gen_data.toml  gen_data_configs.py  model_configs.py  tokenizer.toml  train_dynamics.toml  train_dynamics_maskgit.toml
fluidgenie/: __init__.py
fluidgenie/cli/: __init__.py  demo.py  eval_codebook.py  gen_data.py  train_dynamics.py  train_tokenizer.py
fluidgenie/data/: __init__.py  compute_stats.py  dataset_npz.py  gen_phiflow_ns2d.py  preprocess.py  visualize.py
fluidgenie/eval/: loaders.py  metrics.py  rollout.py  rollout_runner.py  utils.py  viz.py
fluidgenie/eval/samplers/: __init__.py  autoreg.py  maskgit.py
fluidgenie/models/: __init__.py  base_dynamics.py  base_tokenizer.py  dynamics_st.py  lam.py  st_transformer.py  tokenizer_st.py  transformer_dynamics.py  vq_tokenizer.py
fluidgenie/training/: checkpoint_utils.py  config_utils.py  logging_utils.py  losses.py  train_dynamics.py  train_dynamics_base.py  train_dynamics_st.py  train_lam.py  train_tokenizer.py  train_tokenizer_base.py  train_tokenizer_st.py
notebooks/: visualize_ns2d.ipynb
