[project]
name = "fluidgenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Peiyan Yang", email = "yangpeiyan1992@gmail.com" }]
dependencies = [
    "einops>=0.8.2",
    "flax>=0.10.7",
    "imageio>=2.37.2",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "optax>=0.2.6",
    "phiflow>=3.4.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.2",
]
